modules/core/client/css/core.css
.content {
  margin-top: 50px;
}
.undecorated-link:hover {
  text-decoration: none;
}
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none !important;
}
.ng-invalid.ng-dirty {
  border-color: #FA787E;
}
.ng-valid.ng-dirty {
  border-color: #78FA89;
}
.header-profile-image {
  opacity: 0.8;
  height: 28px;
  width: 28px;
  border-radius: 50%;
  margin-right: 5px;
}
.open .header-profile-image, a:hover .header-profile-image {
  opacity: 1;
}
.user-header-dropdown-toggle {
  padding-top: 11px !important;
  padding-bottom: 11px !important;
}
.pageMenuLeftToggleButton {
  left: 0;
}
.visually-hidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}
.home .menubar {
  display: none;
}
.main-logo {
  float: left;
}
.main-logo__link {
  display: block;
  padding: 4px 6px;
  border-radius: 2px;
  font-size: 24px;
  font-size: 1.5rem;
}
.main-logo__link img {
  display: block;
  height: 28px;
}
.main-nav {
  float: right;
}
.main-nav ul li {
  float: left;
}
@media screen and (max-width: 480px) {
  .main-nav--lap-and-up {
    display: none;
  }
}
@media screen and (min-width: 481px) {
  .main-nav--palm {
    display: none;
  }
}
.main-nav__link {
  display: block;
  padding: 0 12px;
  border-radius: 2px;
  font-size: 18px;
  font-size: 1.125rem;
  font-weight: 500;
  color: white;
  line-height: 36px;
  text-decoration: none;
}
@media screen and (min-width: 481px) and (max-width: 1023px) {
  .main-nav__link {
    font-size: 14px;
    font-size: 0.875rem;
  }
}
.dropdown-link {
  min-width: 140px;
}
.sidebar-menu__link {
  display: block;
  padding: 0 16px;
  cursor: pointer;
  font-size: 14px;
  font-size: 0.875rem;
  font-weight: 700;
  color: #333;
  line-height: 48px;
  text-decoration: none;
}
.name-sidebar__link {
  font-weight: bold;
  text-transform: capitalize;
  text-decoration: none;
  background-color: transparent;
}
.sidebar-footer {
  position: fixed;
  left: 0px;
  bottom: 0px;
  width: 100%;
  background: rgb(235, 239, 242);
}
/* IE 6 */

* html .sidebar-footer {
  position: absolute;
  top: expression((0-(footer.offsetHeight)+(document.documentElement.clientHeight ? document.documentElement.clientHeight: document.body.clientHeight)+(ignoreMe=document.documentElement.scrollTop ? document.documentElement.scrollTop: document.body.scrollTop))+'px');
}
md-toolbar {
  box-shadow: none;
}
.dialog--alert {
  top: 20%;
}

